--- a/assets/main.css
+++ b/assets/main.css
@@ -4,7 +4,10 @@ body {
 
 .container {
   text-align: center;
- 
+  max-width: 1100px;
+  margin: auto;
+  overflow: auto;
+  padding: 0 2rem;
   
   transition: all .5s cubic-bezier(.55,0,.1,1);
 }
